[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfortmesa"
version = "0.3.1"
description = "A Python package for running Fortran (specifically MESA) via Python"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-only"
authors = [
  { name = "Ebraheem Farag", email = "ebraheem.farag@yale.edu" }
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/Debraheem/pyfortmesa"
Repository = "https://github.com/Debraheem/pyfortmesa"
Issues = "https://github.com/Debraheem/pyfortmesa/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyfortmesa*"]
