[build-system]
requires = ["meson-python>=0.15.0", "meson>=1.1.0", "ninja", "numpy>=2.0"]
build-backend = "mesonpy"

[project]
name = "pyfortmesa"
version = "0.3.1"
description = "A Python package for running Fortran (specifically MESA) via Python"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-only"
authors = [
  { name = "Ebraheem Farag", email = "ebraheem.farag@yale.edu" }
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/Debraheem/pyfortmesa"
Repository = "https://github.com/Debraheem/pyfortmesa"
Issues = "https://github.com/Debraheem/pyfortmesa/issues"
