[build-system]
requires = ["meson-python>=0.15.0", "meson>=1.1.0", "ninja", "numpy>=2.0"]
build-backend = "mesonpy"

[project]
name = "pyfortmesa"
version = "0.6.0"
description = "Python wrappers for selected MESA routines"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-only"
authors = [
  { name = "Ebraheem Farag", email = "ebraheem.farag@yale.edu" }
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = [
  "build",
  "meson-python>=0.15.0",
  "meson>=1.1.0",
  "ninja",
  "numpy>=2.0",
  "mkdocs>=1.6",
  "twine",
]
docs = [
  "mkdocs>=1.6",
]

[project.urls]
Homepage = "https://github.com/Debraheem/pyfortmesa"
Repository = "https://github.com/Debraheem/pyfortmesa"
Issues = "https://github.com/Debraheem/pyfortmesa/issues"
